@@ -1,153 +1,245 @@
-下面是一份**「三域 · 二十八节点」完整知识树的最终整理版本，既提供 Markdown 结构化大纲 ，也附上一段可直接复制到任何支持 Mermaid 的工具中的思维导图**代码，帮助你在不同场景快速查看、演示或进一步加工。
+开发框架知识树 · 全景文档
 
-
----
-
-一、Markdown 大纲（可直接阅读 / 打印）
-
-Ⅰ 核心运行平台 Foundation
-
-1. 执行内核 Runtime
-
-生命周期 & DI
-
-资源池（线程 / 连接 / 缓存）
-
-协议适配插件（HTTP·gRPC·自研 RPC·OData 适配）
-
-
-
-2. 领域 / 编程模型 Model
-
-数据 DSL：Entity·Relation·Enum
-
-行为 DSL：Command·Query·Event·Workflow
-
-一致性标注：@transactional·@saga
-
-
-
-3. 数据访问 Persistence
-
-ORM/DAO（JPA·MyBatis·QueryDSL）
-
-多租户 / 分片 / 读写分离
-
-数据迁移 & 版本回滚
-
-
-
-4. 安全与合规 Security
-
-身份认证（OAuth 2.1·JWT·SSO）
-
-授权模型（ABAC·行列级权限）
-
-审计日志 & 合规报表
-
+> 版本：v1.0 · 2025‑06‑25
+关键词：Foundation · Developer Loop · Ecosystem · DSL · DX · Observability
 
 
 
 
 ---
 
-Ⅱ 开发者生命环 Developer & Reliability Loop
+目录
 
-5. 开发者工具链 DX Tooling
-
-CLI / 脚手架 / 模型编译器
-
-IDE 插件（高亮·补全·可视化）
-
-增量代码生成 & 保护区
+1. 前言
 
 
-
-6. 扩展机制 Extensibility
-
-插件 SPI / 中间件管道
-
-规则 & 脚本引擎（Groovy/JS 沙箱）
-
-模板自定义
+2. Ⅰ 核心运行平台 Foundation
+   2.1 执行内核 Runtime
+   2.2 领域 / 编程模型 Model
+   2.3 数据访问 Persistence
+   2.4 安全与合规 Security
 
 
-
-7. 测试与质量 Quality Engineering
-
-单元 → 集成 → 合约 金字塔
-
-Testcontainers & Mock Server
-
-CI 质量门禁
+3. Ⅱ 开发者生命环 Developer & Reliability Loop
+   3.1 开发者工具链 DX Tooling
+   3.2 扩展机制 Extensibility
+   3.3 测试与质量 Quality Engineering
+   3.4 可观测性 Observability
 
 
+4. Ⅲ 生态与治理 Delivery & Ecosystem
+   4.1 DevOps 交付 Delivery
+   4.2 文档与示例 Docs & Samples
+   4.3 社区与版本治理 Governance
 
-8. 可观测性 Observability
 
-Trace（OpenTelemetry）
+5. 全局视角：一次请求的生命旅程
 
-Metrics（Micrometer·Prometheus）
 
-Logs（JSON + TraceID）
+6. Mermaid 思维导图
 
-健康探针（/readyz / /livez / /metrics）
 
+7. 参考链接
 
 
 
 
 ---
 
-Ⅲ 生态与治理 Delivery & Ecosystem
+1. 前言
 
-9. DevOps 交付 Delivery
+这个文档收束了对“现代企业级开发框架”所需能力的系统化梳理，将零散的 11 个板块折叠进 三层域、二十八节点 的知识树，既能自顶向下鸟瞰，也能逐节点深挖设计驱动力、落地范式与典型踩坑。
 
-CI/CD 流水线 & Trunk-Based
+使用方法：
 
-镜像 / 制品库 · GitOps
-
-渐进发布（蓝绿·金丝雀·HPA）
+1. 评估现状 —— 把已有模块映射到下文节点，迅速发现空白；
 
 
-
-10. 文档与示例 Docs & Samples
-
-Docs-as-Code & ADR
-
-全栈样例仓库（订单 + 明细）
-
-交互式教程（DevContainer·GitPod）
+2. 分阶段推进 —— 先打牢 Foundation，再补 Developer Loop，最终塑造 Ecosystem；
 
 
-
-11. 社区与版本治理 Governance
-
-语义化版本 & Release Train
-
-RFC 流程（Proposal → Review → Adopt）
-
-贡献指南·Code Style·CLA
-
+3. 持续演进 —— 配套 ADR 与 RFC 流程，让框架与业务同速成长。
 
 
 
 
 ---
 
-用法速览
+2. Ⅰ 核心运行平台 Foundation
 
-目标	建议起步模块
+2.1 执行内核 Runtime
 
-先跑通业务	Ⅰ-1 Runtime + Ⅰ-2 Model + Ⅱ-5 Tooling
-保证稳定性	补 Ⅱ-7 质量 + Ⅱ-8 Observability
-规模演进	引入 Ⅲ-9 DevOps + Ⅲ-11 Governance
+关注点	设计驱动力	落地范式	常见坑
+
+生命周期 & DI	启动时延 vs 插件化	微内核 + SPI (ServiceLoader 或 spring.factories)；AOT 预编译 BeanDefinition	ClassLoader 泄漏；Bean 循环依赖
+资源池	吞吐 vs 稳定	线程/连接/对象池统一治理；虚拟线程友好	池大小配置随业务漂移，导致限流失效
+协议适配插件	性能 vs 扩展	插件化 HTTP / gRPC / 自研 RPC；预留 OData 适配层	传输层异常无法上浮到业务监控
+
+
+> 实践贴士：启动期反射 → 运行期静态，是兼顾灵活与性能的主流思路；Java 17+ 可使用 --add-opens 简化深反射风险。
+
 
 
 
 ---
 
-二、Mermaid 思维导图代码
+2.2 领域 / 编程模型 Model
+
+目标：用同一份 DSL 驱动 代码生成 + 运行时行为，真正做到 Model‑Driven。
+
+数据 DSL：entity / valueObject / enum / association
+
+行为 DSL：command / query / event / workflow
+
+一致性标注：@transactional (本地事务) · @saga (跨服务补偿)
+
+
+落地步骤：
+
+1. DSL → AST 语义树；
+
+
+2. 后端编译器生成 Java POJO / Repository / Service Stub / OpenAPI / SQL；
+
+
+3. 运行时通过注解元信息自动接入事务、审计、链路追踪。
+
+
+
+
+---
+
+2.3 数据访问 Persistence
+
+技术栈并存：JPA (声明式) + MyBatis (细粒度 SQL) + QueryDSL (类型安全查询)。
+
+多租户模式：schema per tenant 优先；行级隔离仅作过渡。
+
+分布式一致性：同库用本地事务；跨库用事件驱动 + Saga。
+
+迁移策略：Liquibase/Flyway 双向脚本，CI 中强制回滚验证。
+
+
+
+---
+
+2.4 安全与合规 Security
+
+模块	关键要点
+
+身份认证	OAuth 2.1、JWT、SSO、mTLS 内部信任链
+授权模型	ABAC (属性) > RBAC (角色)；行/列级权限注解自动注入
+合规 & 审计	GDPR / 中国网安法：日志 TraceID + 数据主权标记；脱敏与加密策略内置
+
+
+
+---
+
+3. Ⅱ 开发者生命环 Developer & Reliability Loop
+
+3.1 开发者工具链 DX Tooling
+
+CLI / 脚手架：time‑to‑first‑query ≤ 30 min 为硬指标。
+
+IDE 插件：高亮、补全、模型可视化、错误即时代码修复。
+
+增量代码生成：保护区标记 + AST 级对比，避免覆盖手写逻辑。
+
+
+3.2 扩展机制 Extensibility
+
+插件 SPI：生命周期回调、AOP 拦截、事件总线。
+
+脚本/规则引擎：Groovy / Nashorn / GraalJS 沙箱执行；限时、限内存。
+
+模板自定义：Mustache / Handlebars；与元模型解耦，幂等生成。
+
+
+3.3 测试与质量 Quality Engineering
+
+层级	方法	资产
+
+单元	Mock、替身注入	JUnit 5 + Mockito
+集成	嵌入式 DB、局部容器化	Testcontainers、docker‑compose
+合约	API / 消息 Pact	Spring Cloud Contract
+
+
+质量闸门：CI 里设置最低测试覆盖率，配合静态分析 (SonarQube)。
+
+3.4 可观测性 Observability
+
+Trace：OpenTelemetry SDK；链路采样率动态可调。
+
+Metrics：Micrometer facade；Prometheus Pull；自定义业务指标绑定 Counter、Timer。
+
+Logs：结构化 JSON + MDC 注入 TraceID / SpanID。
+
+健康探针：统一暴露 /readyz、/livez、/metrics。
+
+
+
+---
+
+4. Ⅲ 生态与治理 Delivery & Ecosystem
+
+4.1 DevOps 交付 Delivery
+
+Trunk‑Based Development：分支存活 < 24 h；自动化合并测试。
+
+CI/CD：GitHub Actions / Jenkinsfile / GitLab CI；流水线模板化。
+
+GitOps & IaC：Helm Chart + Kustomize；Terraform 管理基础设施。
+
+渐进发布：蓝绿 / 金丝雀 / Shadow；自动 HPA 与 PDB。
+
+
+4.2 文档与示例 Docs & Samples
+
+Docs‑as‑Code：Markdown + PlantUML + Mermaid；PR 即文档评审。
+
+样例仓库：订单 + 明细 (Domain & API & Frontend) 全栈示范。
+
+交互式教程：DevContainer / GitPod，一键启动。
+
+
+4.3 社区与版本治理 Governance
+
+主题	机制
+
+版本策略	Semantic Versioning 2.0；Release Train 每 6 周
+RFC 流程	Discussion → PR → Maintainers Review → Merge
+贡献指南	Code Style、CLA、Issue Template、PR Checklist
+
+
+
+---
+
+5. 全局视角：一次请求的生命旅程
+
+a) Client → b) Protocol Adapter → c) Runtime DI → d) Domain Service → e) Repository
+                 ↘                                     ↘               ↘
+                  Trace Span  ← f) Metrics             Events → Saga Coordinator
+
+1. 协议层 解析 URI / gRPC / RPC。
+
+
+2. Runtime 注入 TraceID，启动首段 Span。
+
+
+3. 领域模型 处理 Command / Query。
+
+
+4. Repository 提交后，Micrometer 记录耗时；Trace 完成串联。
+
+
+5. 事件 / 补偿 通过 Saga Coordinator 保证跨服务一致性。
+
+
+
+
+---
+
+6. Mermaid 思维导图
 
 mindmap
   root((开发框架知识树))
@@ -200,30 +292,33 @@ mindmap
         RFC 流程
         贡献指南
 
-> 轻松使用：
 
-1. 把上面 mindmap 代码块粘到 VS Code 插件「Markdown Preview Mermaid Support」或在线 mermaid.live，即可渲染可视化知识树；
+---
 
+7. 参考链接
 
-2. 在任何节点增删改文字，思维导图同步更新，便于团队协作或演示。
+主题	推荐阅读
 
-
-
+OpenTelemetry	https://opentelemetry.io
+Micrometer	https://micrometer.io
+Liquibase Best Practice	https://www.liquibase.org
+Semantic Versioning	https://semver.org
+Trunk‑Based Development	https://trunkbaseddevelopment.com
 
 
 
 ---
 
-小贴士
+> 结语：
 
-打印版：将 Markdown 导出为 PDF，并启用目录（TOC），可作为培训手册。
+Foundation 打底 — 让业务代码跑得稳；
 
-团队工作坊：把思维导图投屏，逐节点打标签（已完成 / 进行中 / 未规划），30 分钟内即可形成共识。
+Developer Loop 保质 — 让迭代快且可观测；
 
-持续演进：将本知识树放入仓库的 /docs/architecture.md，配合 ADR 记录，每次迭代更新即可保持架构透明。
-
-
-> 一句话记忆：Foundation 打底 → Loop 保质 → Ecosystem 长青 —— 这就是现代开发框架的完整生命线。
+Ecosystem 长青 — 让社区、版本与治理为框架护航。
 
 
+
+
+如需增删节点或深入案例，可在 Canvas 左侧标注或直接提出修改需求，文档将保持实时演进。
 
